// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListGroup /> should render list items 1`] = `
<div>
  <div
    class="py-2 px-6 border border-solid border-gray-200 border-t-0 first:border-t first:rounded-t-lg last:rounded-b-lg"
  >
    One
  </div>
  <div
    class="py-2 px-6 border border-solid border-gray-200 border-t-0 first:border-t first:rounded-t-lg last:rounded-b-lg"
  >
    Two
  </div>
  <div
    class="py-2 px-6 border border-solid border-gray-200 border-t-0 first:border-t first:rounded-t-lg last:rounded-b-lg"
  >
    Three
  </div>
</div>
`;

exports[`<ListGroup /> should render list items with square borders 1`] = `
<div>
  <div
    class="py-2 px-6 border border-solid border-gray-200 border-t-0 first:border-t"
  >
    One
  </div>
  <div
    class="py-2 px-6 border border-solid border-gray-200 border-t-0 first:border-t"
  >
    Two
  </div>
  <div
    class="py-2 px-6 border border-solid border-gray-200 border-t-0 first:border-t"
  >
    Three
  </div>
</div>
`;
